# cap_detection

./: .gitignore  Dockerfile  README.md  hsv_analysis.csv  main.py  plan.txt  pyproject.toml
.github/workflows/: ci.yaml
bsort/: cli.py
config/: config.yaml  settings.yaml
configs/: config.yaml  data.yaml  settings.yaml
dataset/: dataset.py
model/: detection_model.py
notebook/: data_exploration.ipynb  image_visualisation_with_bb.ipynb  initial_data_exploration.ipynb  model_development.ipynb  trial.ipynb
scripts/: adjust_label.py  dataset.py
tests/: adjust_label_test.py  data_split_test.py
tools/: cpu_inference.py  infer.py  train.py
utils/: utils.py  visualization_utils.py
